# AIST_2010_Proj

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: HandGesture_TrainingModel.ipynb  RUNME.py  global_variable.py  gui_usage.md  gui_version.py  sound_syn.py  sound_syn.scd  train_model.py
src/hand_gesture_app/: __init__.py  __main__.py
src/music_source/: midi_note_num.py
